--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,11 @@ yarn-error.log*
 # vercel
 .vercel
 
-public/workbox-*.js.map
-public/worker-*.js
-public/workbox-*.js
-public/sw.js.map
+public/precache.*.*.js
 public/sw.js
+public/workbox-*.js
+public/worker-*.js
+public/precache.*.*.js.map
+public/sw.js.map
+public/workbox-*.js.map
+public/worker-*.js.map
